--- a/page/work/index/wait/details/index.axml
+++ b/page/work/index/wait/details/index.axml
@@ -34,9 +34,10 @@
       <text class="item-right">{{data.addIntegral}}</text>
     </view>
     <view class="item">
-      <text class="item-left" style="display: block;">备注</text>
-      <image class="image" src="{{data.approvalImg[0]}}" a:if="{{data.approvalImg[0]}}" />
+      <text class="item-left">备注</text>
+      <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
     </view>
+    <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" />
   </view>
   <steps 
     activeIndex="{{activeIndex}}"
