--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -38,7 +38,7 @@
       <text class="item-left">备注</text>
       <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
     </view>
-    <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" />
+    <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" mode="widthFix" />
   </view>
   <steps activeIndex="{{activeIndex}}" failIndex="{{failIndex}}" items="{{items}}" direction="vertical" a:if="{{status != 0 || steps}}"></steps>
   <view class="page-section-btns" a:else>
