--- a/page/work/market/index.axml
+++ b/page/work/market/index.axml
@@ -1,5 +1,39 @@
-<view class="page">
-  <view class="top"></view>
+<view class="page" style="height: {{windowHeight - bottomHeight}}px">
+  <view class="top" style="background-image: url('/image/background.png')">
+    <view class="top-title">
+      <view class="sub">Meisijia bussiness management services LTD.</view>
+      <view class="main">
+        <text class="green">媚思嘉</text>企业管理服务有限公司
+      </view>
+    </view>
+    <view class="amount">
+      <view class="wrapper">
+        <text class="main">
+          <text class="number">25</text>年        
+        </text>
+        <text class="bottom">历史沉淀</text>
+      </view>
+      <view class="wrapper">
+        <text class="main">
+          <text class="number">516</text>名        
+        </text>
+        <text class="bottom">精英员工</text>
+      </view>
+      <view class="wrapper">
+        <text class="main">
+          <text class="number">10</text>个        
+        </text>
+        <text class="bottom">旗下品牌</text>
+      </view>
+      <view class="wrapper">
+        <text class="main">
+          <text class="number">13</text>家        
+        </text>
+        <text class="bottom">美容机构</text>
+      </view>
+    </view>
+    <view class="description">媚思嘉企业投资管理服务有限公司（Meisijia  business management services LTD.）成立于1993年，一直追求美、把美作为一生事业的郭月香董事长就是一个不断学习追求完美的人。顾客随时变化的要求就是一种市场信息，是一种指导企业发展的方向，企业必须适应这种情况而相应变化。为了能让企业走在行业的前列，郭老师不仅自己不断地实践学习，还鼓励每一位员工充实自我，追求完美。公司一定要保持产品和服务的高品质，并且不断的推陈出新，我们要在激烈的市场竞争中站稳就要具有超前服务意识，不断学习，追求完美。</view>
+  </view>
   <view class="content">
     <text class="content-left">
       <image src="/image/left.png" />
@@ -14,12 +48,26 @@
   </view>
   <view class="main">
     <view a:for="{{items}}" class="item" style="width: {{width}};height: {{height}};display: inline-block">
-      <image src="{{item.goodLbImg ? item.goodLbImg : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541328157322&di=1ff74bf95f26ec47f6ab9d03910ecd88&imgtype=0&src=http%3A%2F%2Ff.hiphotos.baidu.com%2Fzhidao%2Fpic%2Fitem%2Fa5c27d1ed21b0ef4662dfff3d8c451da80cb3e51.jpg'}}" class="item-picture" style="width: {{width}};height: {{width}}"></image>
+      <image src="{{item.goodLbImg}}" class="item-picture" style="width: {{width}};height: {{width}}" mode="aspectFit"></image>
       <view class="item-title">{{item.goodName}}</view>
       <view class="item-bottom">
         <text class="item-bottom-left"><text class="price">{{item.dhIntegral}}</text>积分</text>
-        <text class="item-bottom-right">兑换</text>
+        <text class="item-bottom-right {{item.active ? 'out' : ''}}" onTap="change" data-item="{{item}}">兑换</text>
       </view>
     </view>
+  </view>
+</view>
+<view class="bottom {{goods.length>0 ? 'show' : ''}}" id="bottom">
+  <view class="bottom-main">
+    <view class="left">
+      <text class="bottom-title">您购买了：</text>
+    </view>
+    <view class="bottom-content">
+      <text class="good" a:for="{{goods}}" onTap="delete" data-id="{{item.goodId}}">{{item.goodName}}</text>
+      <text class="total">总共<text class="price">{{sum}}</text>积分</text>
+    </view>
+  </view>
+  <view class="right" onTap="confirm">
+    确定购买
   </view>
 </view>
