--- a/page/work/market/index.axml
+++ b/page/work/market/index.axml
@@ -8,25 +8,25 @@
     </view>
     <view class="amount">
       <view class="wrapper">
-        <text class="main">
+        <text class="amount-main">
           <text class="number">25</text>年        
         </text>
         <text class="bottom">历史沉淀</text>
       </view>
       <view class="wrapper">
-        <text class="main">
+        <text class="amount-main">
           <text class="number">516</text>名        
         </text>
         <text class="bottom">精英员工</text>
       </view>
       <view class="wrapper">
-        <text class="main">
+        <text class="amount-main">
           <text class="number">10</text>个        
         </text>
         <text class="bottom">旗下品牌</text>
       </view>
       <view class="wrapper">
-        <text class="main">
+        <text class="amount-main">
           <text class="number">13</text>家        
         </text>
         <text class="bottom">美容机构</text>
@@ -40,7 +40,7 @@
       可用积分： 
       <text class="points">{{data}}</text>
     </text>
-    <text class="content-right"><image src="/image/right.png" />兑换记录</text>
+    <text class="content-right" onTap="logs"><image src="/image/right.png" />兑换记录</text>
   </view>
   <view class="title">
     <view class="title-up">他们都在兑</view>
@@ -48,7 +48,7 @@
   </view>
   <view class="main">
     <view a:for="{{items}}" class="item" style="width: {{width}};height: {{height}};display: inline-block">
-      <image src="{{item.goodLbImg}}" class="item-picture" style="width: {{width}};height: {{width}}" mode="aspectFit"></image>
+      <image src="{{item.goodImg}}" class="item-picture" style="width: {{width}};height: {{width}}" mode="aspectFit" onTap="toDetails" data-item="{{item}}"></image>
       <view class="item-title">{{item.goodName}}</view>
       <view class="item-bottom">
         <text class="item-bottom-left"><text class="price">{{item.dhIntegral}}</text>积分</text>
