--- a/page/work/declare/approve/index.axml
+++ b/page/work/declare/approve/index.axml
@@ -3,13 +3,13 @@
     <view class="page-section-title">审批标题
     </view>
     <view class="page-section-demo">
-      <textarea auto-height placeholder="" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" />
+      <textarea auto-height placeholder="" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" disabled="{{true}}"/>
     </view>
     <view class="form-line" />
     <view class="page-section-title">审批内容  
     </view>
     <view class="page-section-demo">
-      <textarea auto-height placeholder="" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" />
+      <textarea auto-height placeholder="" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" disabled="{{true}}"/>
     </view>
     <view class="form-line" />
     <input-item
