--- a/page/work/take/index.axml
+++ b/page/work/take/index.axml
@@ -1,12 +1,12 @@
 <view class="page">
   <form onSubmit="formSubmit" class="page-section">
-    <view class="page-section-title important">审批标题
+    <view class="page-section-title important">奖扣标题
     </view>
     <view class="page-section-demo">
       <textarea auto-height placeholder="必填" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" />
     </view>
     <view class="form-line" />
-    <view class="page-section-title important">审批内容  
+    <view class="page-section-title important">奖扣内容  
     </view>
     <view class="page-section-demo">
       <textarea auto-height placeholder="必填" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" />
@@ -28,6 +28,12 @@
     </view>
     <view class="form-line" />
     <view class="picture-btns">
+      <view onTap="datePicker">选择奖扣日期
+        <text class="details">{{date}}</text>
+      </view>
+    </view>
+    <view class="form-line" />
+    <view class="picture-btns">
       <view onTap="chooseImage">选择照片
         <text class="details" a:if="{{filePaths.length == 0}}">图片大小不能超过4M</text>
         <text class="details" a:else>您选择了{{filePaths.length}}张图片</text>
@@ -35,14 +41,23 @@
     </view>
     <view class="form-line" />
     <input-item
-      className="input-text important"
+      className="input-text"
+      type="digit"
+      name="pointsAdd"
+      disabled="{{true}}"
+      placeholder="0"
+    >
+      输入奖励分数
+    </input-item>
+    <input-item
+      className="input-text"
       type="digit"
       name="points"
-      placeholder="必填"
+      placeholder="0"
     >
-      输入奖扣分数
+      输入扣除分数
     </input-item>
-    <view class="form-line" />
+    <!-- <view class="form-line" />
     <picker onChange="changeFrom" value="{{arrIndexFrom}}" range="{{user}}" range-key="userName" name="from">
       <view class="row">
         <view class="row-title">申请人</view>
@@ -53,11 +68,11 @@
     <view class="form-line" />
     <picker onChange="changeApp" value="{{arrIndexApp}}" range="{{apps}}" range-key="userName" name="app">
       <view class="row">
-        <view class="row-title">审批人</view>
+        <view class="row-title">奖扣人</view>
         <view class="row-extra">当前选择：{{apps[arrIndexApp].userName}}</view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
-    </picker>
+    </picker> -->
     <!-- <view class="form-line" />
     <picker onChange="changeTo" value="{{arrIndexTo}}" range="{{users}}" range-key="userName" name="to">
       <view class="row">
@@ -68,7 +83,7 @@
     </picker> -->
     <view class="form-line" />
     <view class="select-section">
-      <view class="title">抄送<text class="details">审批通过后，通知抄送人</text></view>
+      <view class="title important-new">选择员工<text class="details">可以选择多人</text></view>
       <view class="add-wrapper">
         <text class="add" onTap="showFilter">+</text>
         <!-- <text class="name">小绿</text> -->
