--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -26,7 +26,11 @@
       <text class="item-left">申请时间</text>
       <text class="item-right">{{data.sqTime}}</text>
     </view>
-    <view class="item">
+    <view class="item" a:if="{{type}}">
+      <text class="item-left">积分类型</text>
+      <text class="item-right">积分支票</text>
+    </view>
+    <view class="item" a:else>
       <text class="item-left">积分类型</text>
       <text class="item-right">{{data.integralTypeId == '1' ? '品德积分' : (data.integralTypeId == '2' ? '业绩积分' : '行为积分')}}</text>
     </view>
