--- a/page/work/praise/index.axml
+++ b/page/work/praise/index.axml
@@ -1,18 +1,18 @@
 <view class="page">
   <form onSubmit="formSubmit" class="page-section">
-    <view class="page-section-title important">表扬标题
+    <view class="page-section-title important">任务目标
     </view>
     <view class="page-section-demo">
       <textarea auto-height placeholder="必填" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" />
     </view>
     <view class="form-line" />
-    <view class="page-section-title important">表扬内容  
+    <view class="page-section-title important">支票内容
     </view>
     <view class="page-section-demo">
       <textarea auto-height placeholder="必填" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" />
     </view>
     <view class="form-line" />
-    <picker onChange="changePoints" value="{{arrIndexType}}" range="{{types}}" range-key="type" name="types">
+    <!-- <picker onChange="changePoints" value="{{arrIndexType}}" range="{{types}}" range-key="type" name="types">
       <view class="row">
         <view class="row-title">积分类型
         </view>
@@ -20,7 +20,7 @@
         </view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
-    </picker>
+    </picker> -->
     <view class="form-line" />
     <view class="page-section-title">备注</view>
     <view class="page-section-demo">
@@ -35,14 +35,21 @@
     </view> -->
     <imgs onLoad="load" onFilePaths="filePaths" />
     <view class="form-line" />
-    <input-item
-      className="input-text important"
-      type="digit"
-      name="points"
-      placeholder="必填"
-    >
-      输入表扬分数<text>（可用积分 {{data}}）</text>
-    </input-item>
+    <view class="picture-btns">
+      <view>签发日期
+        <text class="details">{{date}}</text>
+      </view>
+    </view>
+    <view class="form-line" />
+    <picker onChange="changePoints" value="{{arrIndexPoints}}" range="{{pointsArray}}" name="points" >
+      <view class="row important">
+        <view class="row-title">奖励积分<text>（可用积分 {{data}}）</text>
+        </view>
+        <view class="row-extra">当前选择：{{pointsArray[arrIndexPoints]}}
+        </view>
+        <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
+      </view>
+    </picker>
     <!-- <view class="form-line" />
     <picker onChange="changeFrom" value="{{arrIndexFrom}}" range="{{user}}" range-key="userName" name="from">
       <view class="row">
@@ -69,7 +76,7 @@
     </picker> -->
     <view class="form-line" />
     <view class="select-section">
-      <view class="title">选择员工<text class="details">可以选择多人</text></view>
+      <view class="title">选择奖励人<text class="details">可以选择多人</text></view>
       <view class="add-wrapper">
         <text class="add" onTap="showFilter">+</text>
         <!-- <text class="name">小绿</text> -->
