--- a/page/work/market/index.axml
+++ b/page/work/market/index.axml
@@ -47,8 +47,8 @@
     <view class="title-dwon">每个职位兑换积分不一样哦</view>
   </view>
   <view class="main">
-    <view a:for="{{items}}" class="item" style="width: {{width}};height: {{height}};display: inline-block">
-      <image src="{{item.goodImg}}" class="item-picture" style="width: {{width}};height: {{width}}" mode="aspectFit" onTap="toDetails" data-item="{{item}}"></image>
+    <view a:for="{{items}}" class="item" style="width: {{width}};display: inline-block">
+      <image src="{{item.goodImg}}" class="item-picture" style="width: {{width}};height: {{width}}" mode="aspectFill" onTap="toDetails" data-item="{{item}}"></image>
       <view class="item-title">{{item.goodName}}</view>
       <view class="item-bottom">
         <text class="item-bottom-left"><text class="price">{{item.dhIntegral}}</text>积分</text>
