--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -76,7 +76,7 @@
         <view class="brief">
           <view class="brief-title">{{item.approvalTitle}}</view>
           <view class="brief-content">{{item.approvalContent}}</view>
-          <image class="brief-image" src="{{item}}" a:for="{{item.approvalImg1}}" catchTap="preview" data-index="{{index}}" mode="widthFix" />
+          <image class="brief-image" src="{{item}}" a:for="{{item.approvalImg1}}" catchTap="preview" data-index="{{index}}" mode="aspectFill" />
           <view class="brief-time">{{item.spTime}}</view>
         </view>
         <view slot="extra" class="extra">
