--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -42,7 +42,7 @@
       <text class="item-left">备注</text>
       <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
     </view>
-    <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" mode="widthFix" />
+    <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" mode="aspectFill" />
   </view>
   
   
