--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -1,6 +1,7 @@
 <view class="page">
   <!-- <view class="top" style="background:url({{data.img}}) 100%/100% no-repeat"> -->
-  <view class="top" style="background-image: url('/image/background.png')">
+  <top />
+  <!-- <view class="top" style="background-image: url('/image/background.png')">
     <view class="title">
       <view class="sub">Meisijia bussiness management services LTD.</view>
       <view class="main"><text class="green">媚思嘉</text>企业管理服务有限公司</view>
@@ -32,7 +33,7 @@
       </view>
     </view>
     <view class="description">媚思嘉企业投资管理服务有限公司（Meisijia  business management services LTD.）成立于1993年，一直追求美、把美作为一生事业的郭月香董事长就是一个不断学习追求完美的人。顾客随时变化的要求就是一种市场信息，是一种指导企业发展的方向，企业必须适应这种情况而相应变化。为了能让企业走在行业的前列，郭老师不仅自己不断地实践学习，还鼓励每一位员工充实自我，追求完美。公司一定要保持产品和服务的高品质，并且不断的推陈出新，我们要在激烈的市场竞争中站稳就要具有超前服务意识，不断学习，追求完美。</view>
-  </view>
+  </view> -->
   <view class="content">
     <view class="content-title">
       <text>今日积分排名</text>
