--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -67,5 +67,21 @@
 </view>
 
 <view class="filter {{fail ? 'show-filter' : ''}}">
-
+  
 </view>
+<form onSubmit="formSubmit" class="page-section form {{fail ? 'show-form' : ''}}">
+  <view class="page-section-title">填写拒绝理由
+  </view>
+  <view class="page-section-demo">
+    <textarea auto-height placeholder="" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" disabled="{{false}}"/>
+  </view>
+  <view class="form-line" />
+  <view class="page-section-btns">
+    <view>
+      <button size="mini" type="ghost" onTap="failBack">返回</button>
+    </view>
+    <view>
+      <button formType="submit" type="primary" class="button-form" size="mini">确定</button>
+    </view>
+  </view>
+</form>
