--- a/page/work/like/index.axml
+++ b/page/work/like/index.axml
@@ -15,6 +15,8 @@
     <text class="name">{{user.userName}}        
     </text>
     <view class="brief">
+      <view class="brief-title">这里是你自己的被点赞记录。
+      </view>
       <view class="brief-bottom">
         <text class="brief-bottom-left">{{user.remark ? "已经被 " + user.remark + " 点赞了" : "你现在还没有被人点赞"}}</text>
       </view>
