--- a/page/rank/index/index.axml
+++ b/page/rank/index/index.axml
@@ -37,7 +37,7 @@
       >
         <view class="brief">
           <text class="brief-col number">{{index>2 ? index+1 : ""}}</text>
-          <text class="brief-col"><image class="avatar" src="{{item.userImg}}"></image></text>
+          <text class="brief-col"><image class="avatar" src="{{item.userImg ? item.userImg : '/image/logo.png'}}"></image></text>
           <text class="brief-col">{{item.userName}}</text>
           <text class="brief-col">{{item.total}}</text>
           <text class="brief-col">{{item.deduce}}</text>
