--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -20,7 +20,7 @@
     </view>
     <view class="item">
       <text class="item-left">审批内容</text>
-      <text class="item-right" style="padding-left: 35%;display: block">{{data.approvalContent}}</text>
+      <text class="item-right" style="padding-left: 35%;display: block;float: none">{{data.approvalContent}}</text>
     </view>
     <view class="item">
       <text class="item-left">申请时间</text>
@@ -41,6 +41,10 @@
     <view class="item">
       <text class="item-left">备注</text>
       <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
+    </view>
+    <view class="item" a:if="{{status == 2}}">
+      <text class="item-left">不过原因</text>
+      <text class="item-right" style="padding-left: 35%;display: block;color: red">{{data.disapproveUndo ? data.disapproveUndo : '无'}}</text>
     </view>
     <image class="image" a:for="{{data.approvalImg}}" src="{{item}}" onTap="preview" data-index="{{index}}" mode="widthFix" />
   </view>
