--- a/page/work/publish/rush/index.axml
+++ b/page/work/publish/rush/index.axml
@@ -12,15 +12,15 @@
       <textarea auto-height placeholder="必填" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" />
     </view>
     <view class="form-line" />
-    <!-- <picker onChange="changePoints" value="{{arrIndexType}}" range="{{types}}" range-key="type" name="types">
+    <picker onChange="changePoints" value="{{arrIndexType}}" range="{{types}}" range-key="name" name="types">
       <view class="row">
         <view class="row-title">积分类型
         </view>
-        <view class="row-extra">当前选择：{{types[arrIndexType].type}}                
+        <view class="row-extra">当前选择：{{types[arrIndexType].name}}                
         </view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
-    </picker> -->
+    </picker>
     <view class="form-line" />
     <view class="page-section-title">备注</view>
     <view class="page-section-demo">
@@ -33,11 +33,17 @@
         <text class="details" a:else>您选择了{{filePaths.length}}张图片</text>
       </view>
     </view> -->
-    <imgs onLoad="load" onFilePaths="filePaths" />
+    <!-- <imgs onLoad="load" onFilePaths="filePaths" />
+    <view class="form-line" /> -->
+    <view class="picture-btns">
+      <view onTap="datePicker1">选择开始日期
+        <text class="details">{{date1}}</text>
+      </view>
+    </view>
     <view class="form-line" />
     <view class="picture-btns">
-      <view>签发日期
-        <text class="details">{{date}}</text>
+      <view onTap="datePicker2">选择结束日期
+        <text class="details">{{date2}}</text>
       </view>
     </view>
     <view class="form-line" />
