--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -38,6 +38,10 @@
       <text class="item-left">申请积分</text>
       <text class="item-right">{{data.addIntegral}}</text>
     </view>
+    <view class="item" a:if="{{data.kIntegral}}">
+      <text class="item-left">扣除积分</text>
+      <text class="item-right">{{data.kIntegral}}</text>
+    </view>
     <view class="item">
       <text class="item-left">备注</text>
       <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
