--- a/page/register/index/index.axml
+++ b/page/register/index/index.axml
@@ -1,4 +1,4 @@
-<view class="page" hidden="{{hideList}}">
+<view class="page">
   <view class="title">媚思嘉积分平台</view>
   <form class="form" onSubmit="formSubmit">
     <view class="input">
