--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -32,7 +32,7 @@
     </view>
     <view class="item" a:else>
       <text class="item-left">积分类型</text>
-      <text class="item-right">{{data.integralTypeId == '1' ? '品德积分' : (data.integralTypeId == '2' ? '业绩积分' : '行为积分')}}</text>
+      <text class="item-right">{{data.integralTypeId == '1' ? '品德分' : (data.integralTypeId == '2' ? '业绩分' : (data.integralTypeId == '3' ? '行为分' : (data.integralTypeId == '4' ? '奖扣分' : (data.integralTypeId == '5' ? '奖励分' : (data.integralTypeId == '6' ? '点赞分' : (data.integralTypeId == '7' ? '任务分' : '行为分'))))))}}</text>
     </view>
     <view class="item" a:if="{{!data.kIntegral}}">
       <text class="item-left">申请积分</text>
