--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -77,14 +77,14 @@
         <view class="brief">
           <view class="brief-title">{{item.approvalTitle}}</view>
           <view class="brief-content">{{item.approvalContent}}</view>
-          <image class="brief-image" src="{{item}}" a:for="{{item.approvalImg1}}" catchTap="preview" data-index="{{index}}" mode="widthFix" />
+          <image class="brief-image" src="{{item}}" a:if="{{item.approvalImg1[0]}}" a:for="{{item.approvalImg1}}" catchTap="preview" data-index="{{index}}" mode="widthFix" />
           <view class="brief-time">{{item.spTime}}</view>
         </view>
         <view slot="extra" class="extra" a:if="{{!(item.kIntegral > 0)}}">
-         +{{item.sqIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : (item.integralTypeId == '3' ? 'C分' : (item.integralTypeId == '4' ? '奖扣分' : (item.integralTypeId == '5' ? '奖励分' : (item.integralTypeId == '6' ? '点赞分' : (item.integralTypeId == '7' ? '任务分' : 'C分'))))))}}
+         +{{item.sqIntegral}}    {{item.integralTypeId == '1' ? '品德分' : (item.integralTypeId == '2' ? '业绩分' : (item.integralTypeId == '3' ? '行为分' : (item.integralTypeId == '4' ? '奖扣分' : (item.integralTypeId == '5' ? '奖励分' : (item.integralTypeId == '6' ? '点赞分' : (item.integralTypeId == '7' ? '任务分' : '行为分'))))))}}
         </view>
         <view slot="extra" class="extra" a:else>
-         -{{item.kIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : (item.integralTypeId == '3' ? 'C分' : (item.integralTypeId == '4' ? '奖扣分' : (item.integralTypeId == '5' ? '奖励分' : (item.integralTypeId == '6' ? '点赞分' : (item.integralTypeId == '7' ? '任务分' : 'C分'))))))}}
+         -{{item.kIntegral}}    {{item.integralTypeId == '1' ? '品德分' : (item.integralTypeId == '2' ? '业绩分' : (item.integralTypeId == '3' ? '行为分' : (item.integralTypeId == '4' ? '奖扣分' : (item.integralTypeId == '5' ? '奖励分' : (item.integralTypeId == '6' ? '点赞分' : (item.integralTypeId == '7' ? '任务分' : '行为分'))))))}}
         </view>
       </list-item>
     </block> 
