--- a/page/work/publish/rush/index.axml
+++ b/page/work/publish/rush/index.axml
@@ -58,7 +58,7 @@
       </view>
     </picker>
     <view class="form-line" />
-    <button type="default" plain onTap="showSelect" class="range-select">选择范围<text class="right-arrow"></text></button>
+    <button type="default" plain onTap="showSelect" hover-class="none" class="range-select">选择范围<text class="right-arrow"></text></button>
     <view class="form-line" />
     <button formType="submit" type="primary" loading="{{loading}}" class="button-form">提交</button>
   </form>
